fix sidebar, add absences to calendar, delete employee, drag and drop on requests for absence, redesign login page
